# fsm

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: implementation_guide.md
include/fsm/: runtime.hpp  version.hpp
test/: dot_graph_test.cpp  edge_cases_test.cpp  extra_runtime_tests.cpp  fsm_runtime_tests.cpp  int_type_test.cpp  void_context_test.cpp
